--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
   },
   "dependencies": {
     "async": "^2.5.0",
-    "body-parser": "^1.18.1",
     "bootstrap": "^3.3.7",
-    "clipboard": "^1.7.1",
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.4",
-    "express-session": "^1.15.5",
+    "express": "^4.16.1",
+    "express-session": "^1.15.6",
+    "file-saver": "^1.3.3",
     "forge-apis": "^0.4.1",
     "jquery": "^3.2.1",
     "jstree": "^3.3.4",
     "moment": "^2.18.1",
-    "request": "^2.82.0"
+    "xlsx": "^0.11.6"
   },
   "scripts": {
     "start": "node start.js"
